
[package]
name = "plaception"
version = "0.0.1"
description = "decentralized implementation of r/place"
authors = ["Constructor <Avanatiker@github.com>"]
repository = "https://github.com/Avanatiker/Plaception"
license = "Apache-2.0"
homepage = "https://github.com/Avanatiker/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.2"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "plaception"
crate-type = ["cdylib", "lib"]
